project4/typecheck/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Function

    2 Function: Function T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body
    3         | T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body

    4 Body: '{' Function VariableDeclaration3 Body2 Return '}'
    5     | '{' Function Body2 Return '}'
    6     | '{' Function VariableDeclaration3 Return '}'
    7     | '{' Function Return '}'
    8     | '{' VariableDeclaration3 Return '}'
    9     | '{' VariableDeclaration3 Body2 Return '}'
   10     | '{' Body2 Return '}'
   11     | '{' Return '}'

   12 Body2: Body2 IfWhile
   13      | IfWhile
   14      | Body2 Statement
   15      | Statement
   16      | Body2 Body3
   17      | Body3

   18 Body3: '{' VariableDeclaration3 Body2 '}'
   19      | '{' VariableDeclaration3 '}'
   20      | '{' Body2 '}'
   21      | '{' '}'

   22 Statement: Assignment ';'
   23          | FunctionStatement ';'

   24 Expression: Expression T_PLUS Term
   25           | Expression T_MINUS Term
   26           | Term

   27 Term: Term T_TIMES Factor
   28     | Term T_FSLASH Factor
   29     | Term T_AND Factor
   30     | Term T_OR Factor
   31     | Term T_EQEQ Factor
   32     | Term T_LTE Factor
   33     | Term T_LT Factor
   34     | Term T_GTE Factor
   35     | Term T_GT Factor
   36     | Term T_NOTEQ Factor
   37     | Factor

   38 Factor: '(' Expression ')'
   39       | Integers
   40       | T_MINUS Factor
   41       | T_PLUS Factor
   42       | T_DEREF Factor
   43       | T_NOT Factor
   44       | T_FALSE
   45       | T_TRUE
   46       | ID
   47       | IDArrAcc
   48       | T_CHARACTER
   49       | T_ADDRESS Factor
   50       | '|' Expression '|'
   51       | T_NULL

   52 Assignment: IDArrEle T_EQ Expression
   53           | ID T_EQ Expression
   54           | ID T_EQ T_STRING
   55           | T_DEREF ID T_EQ Expression

   56 Integers: T_INTBIN
   57         | T_INTOCT
   58         | T_INTDEC
   59         | T_INTHEX

   60 VariableType: T_INT
   61             | T_INTPTR
   62             | T_BOOL
   63             | T_STR '[' Integers ']'
   64             | T_CHAR
   65             | T_CHARPTR

   66 VariableDeclaration: VariableDeclaration2
   67                    | %empty

   68 VariableDeclaration2: VariablesDeclaration VariableType
   69                     | VariableDeclaration2 ';' VariablesDeclaration VariableType

   70 VariableDeclaration3: T_VAR VariablesDeclaration VariableType ';'
   71                     | VariableDeclaration3 T_VAR VariablesDeclaration VariableType ';'

   72 VariablesDeclaration: VariablesDeclaration VariablesDeclaration1
   73                     | %empty

   74 VariablesDeclaration1: ID ','
   75                      | ID ':'

   76 IfWhile: T_IF '(' Expression ')' '{' Body2 '}'
   77        | T_IF '(' Expression ')' '{' '}'
   78        | T_IF '(' Expression ')' '{' Body2 '}' Else
   79        | T_WHILE '(' Expression ')' '{' '}'
   80        | T_WHILE '(' Expression ')' '{' Body2 '}'
   81        | T_IF '(' Expression ')' '{' VariableDeclaration3 Body2 '}'
   82        | T_IF '(' Expression ')' '{' VariableDeclaration3 Body2 '}' Else
   83        | T_WHILE '(' Expression ')' '{' VariableDeclaration3 Body2 '}'
   84        | T_IF '(' Expression ')' '{' '}' Else

   85 Else: T_ELSE '{' Body2 '}'
   86     | T_ELSE '{' VariableDeclaration3 '}'
   87     | T_ELSE '{' VariableDeclaration3 Body2 '}'
   88     | T_ELSE '{' '}'

   89 ID: T_ID

   90 IDArrEle: T_ID '[' Expression ']'

   91 IDArrAcc: T_ID '[' Expression ']'

   92 FunctionStatement: ID T_EQ ID '(' FunctionExpression1 ')'
   93                  | IDArrEle T_EQ ID '(' FunctionExpression1 ')'

   94 FunctionExpression1: FunctionExpression
   95                    | %empty

   96 FunctionExpression: Expression ',' FunctionExpression
   97                   | Expression

   98 Return: T_RET Expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 3 38 76 77 78 79 80 81 82 83 84 92 93
')' (41) 2 3 38 76 77 78 79 80 81 82 83 84 92 93
',' (44) 74 96
':' (58) 75
';' (59) 22 23 69 70 71 98
'[' (91) 63 90 91
']' (93) 63 90 91
'{' (123) 4 5 6 7 8 9 10 11 18 19 20 21 76 77 78 79 80 81 82 83 84
    85 86 87 88
'|' (124) 50
'}' (125) 4 5 6 7 8 9 10 11 18 19 20 21 76 77 78 79 80 81 82 83 84
    85 86 87 88
error (256)
T_OR (258) 30
T_AND (259) 29
T_LT (260) 33
T_LTE (261) 32
T_GT (262) 35
T_GTE (263) 34
T_NOTEQ (264) 36
T_EQEQ (265) 31
T_PLUS (266) 24 41
T_MINUS (267) 25 40
T_ID (268) 89 90 91
T_STRING (269) 54
T_CHARACTER (270) 48
T_NOT (271) 43
T_BOOL (272) 62
T_CHAR (273) 64
T_INT (274) 60
T_STR (275) 63
T_INTPTR (276) 61
T_CHARPTR (277) 65
T_IF (278) 76 77 78 81 82 84
T_ELSE (279) 85 86 87 88
T_WHILE (280) 79 80 83
T_VAR (281) 70 71
T_PROC (282) 2 3
T_RET (283) 2 3 98
T_NULL (284) 51
T_FSLASH (285) 28
T_EQ (286) 52 53 54 55 92 93
T_ADDRESS (287) 49
T_DEREF (288) 42 55
T_TRUE (289) 45
T_FALSE (290) 44
T_INTBIN (291) 56
T_INTOCT (292) 57
T_INTDEC (293) 58
T_INTHEX (294) 59
T_TIMES (295) 27


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Start (52)
    on left: 1, on right: 0
Function (53)
    on left: 2 3, on right: 1 2 4 5 6 7
Body (54)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
Body2 (55)
    on left: 12 13 14 15 16 17, on right: 4 5 9 10 12 14 16 18 20 76
    78 80 81 82 83 85 87
Body3 (56)
    on left: 18 19 20 21, on right: 16 17
Statement (57)
    on left: 22 23, on right: 14 15
Expression (58)
    on left: 24 25 26, on right: 24 25 38 50 52 53 55 76 77 78 79 80
    81 82 83 84 90 91 96 97 98
Term (59)
    on left: 27 28 29 30 31 32 33 34 35 36 37, on right: 24 25 26 27
    28 29 30 31 32 33 34 35 36
Factor (60)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51, on right: 27
    28 29 30 31 32 33 34 35 36 37 40 41 42 43 49
Assignment (61)
    on left: 52 53 54 55, on right: 22
Integers (62)
    on left: 56 57 58 59, on right: 39 63
VariableType (63)
    on left: 60 61 62 63 64 65, on right: 2 3 68 69 70 71
VariableDeclaration (64)
    on left: 66 67, on right: 2 3
VariableDeclaration2 (65)
    on left: 68 69, on right: 66 69
VariableDeclaration3 (66)
    on left: 70 71, on right: 4 6 8 9 18 19 71 81 82 83 86 87
VariablesDeclaration (67)
    on left: 72 73, on right: 68 69 70 71 72
VariablesDeclaration1 (68)
    on left: 74 75, on right: 72
IfWhile (69)
    on left: 76 77 78 79 80 81 82 83 84, on right: 12 13
Else (70)
    on left: 85 86 87 88, on right: 78 82 84
ID (71)
    on left: 89, on right: 2 3 46 53 54 55 74 75 92 93
IDArrEle (72)
    on left: 90, on right: 52 93
IDArrAcc (73)
    on left: 91, on right: 47
FunctionStatement (74)
    on left: 92 93, on right: 23
FunctionExpression1 (75)
    on left: 94 95, on right: 92 93
FunctionExpression (76)
    on left: 96 97, on right: 94 96
Return (77)
    on left: 98, on right: 4 5 6 7 8 9 10 11


State 0

    0 $accept: . Start $end

    T_PROC  shift, and go to state 1

    Start     go to state 2
    Function  go to state 3


State 1

    3 Function: T_PROC . ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_ID  shift, and go to state 4

    ID  go to state 5


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

    1 Start: Function .
    2 Function: Function . T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_PROC  shift, and go to state 7

    $default  reduce using rule 1 (Start)


State 4

   89 ID: T_ID .

    $default  reduce using rule 89 (ID)


State 5

    3 Function: T_PROC ID . '(' VariableDeclaration ')' T_RET VariableType Body

    '('  shift, and go to state 8


State 6

    0 $accept: Start $end .

    $default  accept


State 7

    2 Function: Function T_PROC . ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_ID  shift, and go to state 4

    ID  go to state 9


State 8

    3 Function: T_PROC ID '(' . VariableDeclaration ')' T_RET VariableType Body

    ')'       reduce using rule 67 (VariableDeclaration)
    $default  reduce using rule 73 (VariablesDeclaration)

    VariableDeclaration   go to state 10
    VariableDeclaration2  go to state 11
    VariablesDeclaration  go to state 12


State 9

    2 Function: Function T_PROC ID . '(' VariableDeclaration ')' T_RET VariableType Body

    '('  shift, and go to state 13


State 10

    3 Function: T_PROC ID '(' VariableDeclaration . ')' T_RET VariableType Body

    ')'  shift, and go to state 14


State 11

   66 VariableDeclaration: VariableDeclaration2 .
   69 VariableDeclaration2: VariableDeclaration2 . ';' VariablesDeclaration VariableType

    ';'  shift, and go to state 15

    $default  reduce using rule 66 (VariableDeclaration)


State 12

   68 VariableDeclaration2: VariablesDeclaration . VariableType
   72 VariablesDeclaration: VariablesDeclaration . VariablesDeclaration1

    T_ID       shift, and go to state 4
    T_BOOL     shift, and go to state 16
    T_CHAR     shift, and go to state 17
    T_INT      shift, and go to state 18
    T_STR      shift, and go to state 19
    T_INTPTR   shift, and go to state 20
    T_CHARPTR  shift, and go to state 21

    VariableType           go to state 22
    VariablesDeclaration1  go to state 23
    ID                     go to state 24


State 13

    2 Function: Function T_PROC ID '(' . VariableDeclaration ')' T_RET VariableType Body

    ')'       reduce using rule 67 (VariableDeclaration)
    $default  reduce using rule 73 (VariablesDeclaration)

    VariableDeclaration   go to state 25
    VariableDeclaration2  go to state 11
    VariablesDeclaration  go to state 12


State 14

    3 Function: T_PROC ID '(' VariableDeclaration ')' . T_RET VariableType Body

    T_RET  shift, and go to state 26


State 15

   69 VariableDeclaration2: VariableDeclaration2 ';' . VariablesDeclaration VariableType

    $default  reduce using rule 73 (VariablesDeclaration)

    VariablesDeclaration  go to state 27


State 16

   62 VariableType: T_BOOL .

    $default  reduce using rule 62 (VariableType)


State 17

   64 VariableType: T_CHAR .

    $default  reduce using rule 64 (VariableType)


State 18

   60 VariableType: T_INT .

    $default  reduce using rule 60 (VariableType)


State 19

   63 VariableType: T_STR . '[' Integers ']'

    '['  shift, and go to state 28


State 20

   61 VariableType: T_INTPTR .

    $default  reduce using rule 61 (VariableType)


State 21

   65 VariableType: T_CHARPTR .

    $default  reduce using rule 65 (VariableType)


State 22

   68 VariableDeclaration2: VariablesDeclaration VariableType .

    $default  reduce using rule 68 (VariableDeclaration2)


State 23

   72 VariablesDeclaration: VariablesDeclaration VariablesDeclaration1 .

    $default  reduce using rule 72 (VariablesDeclaration)


State 24

   74 VariablesDeclaration1: ID . ','
   75                      | ID . ':'

    ','  shift, and go to state 29
    ':'  shift, and go to state 30


State 25

    2 Function: Function T_PROC ID '(' VariableDeclaration . ')' T_RET VariableType Body

    ')'  shift, and go to state 31


State 26

    3 Function: T_PROC ID '(' VariableDeclaration ')' T_RET . VariableType Body

    T_BOOL     shift, and go to state 16
    T_CHAR     shift, and go to state 17
    T_INT      shift, and go to state 18
    T_STR      shift, and go to state 19
    T_INTPTR   shift, and go to state 20
    T_CHARPTR  shift, and go to state 21

    VariableType  go to state 32


State 27

   69 VariableDeclaration2: VariableDeclaration2 ';' VariablesDeclaration . VariableType
   72 VariablesDeclaration: VariablesDeclaration . VariablesDeclaration1

    T_ID       shift, and go to state 4
    T_BOOL     shift, and go to state 16
    T_CHAR     shift, and go to state 17
    T_INT      shift, and go to state 18
    T_STR      shift, and go to state 19
    T_INTPTR   shift, and go to state 20
    T_CHARPTR  shift, and go to state 21

    VariableType           go to state 33
    VariablesDeclaration1  go to state 23
    ID                     go to state 24


State 28

   63 VariableType: T_STR '[' . Integers ']'

    T_INTBIN  shift, and go to state 34
    T_INTOCT  shift, and go to state 35
    T_INTDEC  shift, and go to state 36
    T_INTHEX  shift, and go to state 37

    Integers  go to state 38


State 29

   74 VariablesDeclaration1: ID ',' .

    $default  reduce using rule 74 (VariablesDeclaration1)


State 30

   75 VariablesDeclaration1: ID ':' .

    $default  reduce using rule 75 (VariablesDeclaration1)


State 31

    2 Function: Function T_PROC ID '(' VariableDeclaration ')' . T_RET VariableType Body

    T_RET  shift, and go to state 39


State 32

    3 Function: T_PROC ID '(' VariableDeclaration ')' T_RET VariableType . Body

    '{'  shift, and go to state 40

    Body  go to state 41


State 33

   69 VariableDeclaration2: VariableDeclaration2 ';' VariablesDeclaration VariableType .

    $default  reduce using rule 69 (VariableDeclaration2)


State 34

   56 Integers: T_INTBIN .

    $default  reduce using rule 56 (Integers)


State 35

   57 Integers: T_INTOCT .

    $default  reduce using rule 57 (Integers)


State 36

   58 Integers: T_INTDEC .

    $default  reduce using rule 58 (Integers)


State 37

   59 Integers: T_INTHEX .

    $default  reduce using rule 59 (Integers)


State 38

   63 VariableType: T_STR '[' Integers . ']'

    ']'  shift, and go to state 42


State 39

    2 Function: Function T_PROC ID '(' VariableDeclaration ')' T_RET . VariableType Body

    T_BOOL     shift, and go to state 16
    T_CHAR     shift, and go to state 17
    T_INT      shift, and go to state 18
    T_STR      shift, and go to state 19
    T_INTPTR   shift, and go to state 20
    T_CHARPTR  shift, and go to state 21

    VariableType  go to state 43


State 40

    4 Body: '{' . Function VariableDeclaration3 Body2 Return '}'
    5     | '{' . Function Body2 Return '}'
    6     | '{' . Function VariableDeclaration3 Return '}'
    7     | '{' . Function Return '}'
    8     | '{' . VariableDeclaration3 Return '}'
    9     | '{' . VariableDeclaration3 Body2 Return '}'
   10     | '{' . Body2 Return '}'
   11     | '{' . Return '}'

    T_ID     shift, and go to state 44
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46
    T_VAR    shift, and go to state 47
    T_PROC   shift, and go to state 1
    T_RET    shift, and go to state 48
    T_DEREF  shift, and go to state 49
    '{'      shift, and go to state 50

    Function              go to state 51
    Body2                 go to state 52
    Body3                 go to state 53
    Statement             go to state 54
    Assignment            go to state 55
    VariableDeclaration3  go to state 56
    IfWhile               go to state 57
    ID                    go to state 58
    IDArrEle              go to state 59
    FunctionStatement     go to state 60
    Return                go to state 61


State 41

    3 Function: T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body .

    $default  reduce using rule 3 (Function)


State 42

   63 VariableType: T_STR '[' Integers ']' .

    $default  reduce using rule 63 (VariableType)


State 43

    2 Function: Function T_PROC ID '(' VariableDeclaration ')' T_RET VariableType . Body

    '{'  shift, and go to state 40

    Body  go to state 62


State 44

   89 ID: T_ID .
   90 IDArrEle: T_ID . '[' Expression ']'

    '['  shift, and go to state 63

    $default  reduce using rule 89 (ID)


State 45

   76 IfWhile: T_IF . '(' Expression ')' '{' Body2 '}'
   77        | T_IF . '(' Expression ')' '{' '}'
   78        | T_IF . '(' Expression ')' '{' Body2 '}' Else
   81        | T_IF . '(' Expression ')' '{' VariableDeclaration3 Body2 '}'
   82        | T_IF . '(' Expression ')' '{' VariableDeclaration3 Body2 '}' Else
   84        | T_IF . '(' Expression ')' '{' '}' Else

    '('  shift, and go to state 64


State 46

   79 IfWhile: T_WHILE . '(' Expression ')' '{' '}'
   80        | T_WHILE . '(' Expression ')' '{' Body2 '}'
   83        | T_WHILE . '(' Expression ')' '{' VariableDeclaration3 Body2 '}'

    '('  shift, and go to state 65


State 47

   70 VariableDeclaration3: T_VAR . VariablesDeclaration VariableType ';'

    $default  reduce using rule 73 (VariablesDeclaration)

    VariablesDeclaration  go to state 66


State 48

   98 Return: T_RET . Expression ';'

    T_PLUS       shift, and go to state 67
    T_MINUS      shift, and go to state 68
    T_ID         shift, and go to state 69
    T_CHARACTER  shift, and go to state 70
    T_NOT        shift, and go to state 71
    T_NULL       shift, and go to state 72
    T_ADDRESS    shift, and go to state 73
    T_DEREF      shift, and go to state 74
    T_TRUE       shift, and go to state 75
    T_FALSE      shift, and go to state 76
    T_INTBIN     shift, and go to state 34
    T_INTOCT     shift, and go to state 35
    T_INTDEC     shift, and go to state 36
    T_INTHEX     shift, and go to state 37
    '('          shift, and go to state 77
    '|'          shift, and go to state 78

    Expression  go to state 79
    Term        go to state 80
    Factor      go to state 81
    Integers    go to state 82
    ID          go to state 83
    IDArrAcc    go to state 84


State 49

   55 Assignment: T_DEREF . ID T_EQ Expression

    T_ID  shift, and go to state 4

    ID  go to state 85


State 50

   18 Body3: '{' . VariableDeclaration3 Body2 '}'
   19      | '{' . VariableDeclaration3 '}'
   20      | '{' . Body2 '}'
   21      | '{' . '}'
